--- a/Moja Stranica/Stranice/style.css
+++ b/Moja Stranica/Stranice/style.css
@@ -1,52 +1,60 @@
 body{
-
-    senide resi
-    /* širina stranice */
-    width: 1200px;;
-
-    margin: auto;
-    text-align: center;
-
-
+    margin: 0;
+    background-color: black;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 300;
 }
 
+/* NAV BAR */
 
-h1{
+    .container{
 
-    font-family:  Helvetica,Arial, sans-serif;
-    font-size: 83px;
-    text-transform: uppercase;
+        width: 80%;
+        margin: 0 auto;
+    }
 
-    /* Koliko je odmaknuto od gore */
-    padding-top: 350px ;
-    
-}
+    header{
 
-p{
+        background-color: rgb(53, 194, 123);
+    }
 
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 27px;
-    text-transform: uppercase;
+    /* ovo je jer se header smanji i onda ne radi */
+    header::after{
+        content: '';
+        display: table;
+        clear: both;
+    }
 
-}
+    .logo{
 
-nav{
+        float: left;
+        height: 60px;
+        width: 60px;
+        padding: 20px;
 
-    display: block;
-    width: 1000px;
+    }
 
-    padding: 10px 29px;
-}
+    nav{
 
-ul, li{
+        float: right;
 
-    list-style: none;
+    }
 
-    float:left;
-}
+    nav ul{
 
-nav a{
+        margin: 0;
+        padding: 0;
+        list-style-type: none;
 
-    text-decoration: none;
-    color: black;
-}
+    }
+
+    nav li{
+
+        display: inline-block;
+        margin: 0px 35px;
+        padding-top: 40px;
+
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 20px;
+
+    }
