--- a/Moja Stranica/Stranice/style.css
+++ b/Moja Stranica/Stranice/style.css
@@ -36,7 +36,7 @@ body{
 
     nav{
 
-        float: right;
+        text-align: center;
 
     }
 
@@ -52,9 +52,21 @@ body{
 
         display: inline-block;
         margin: 0px 35px;
-        padding-top: 40px;
+        padding: 20px;
 
         font-family: Arial, Helvetica, sans-serif;
         font-size: 20px;
+        text-transform: uppercase;
+        
 
     }
+
+    nav a{
+
+        color: white;
+        text-decoration: none;
+    }
+
+
+
+    
