--- a/Moja Stranica/Stranice/style.css
+++ b/Moja Stranica/Stranice/style.css
@@ -1,1 +1,171 @@
-HEAD
+*{
+
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+
+/* NAvigacijska traka */
+
+nav{
+
+    /* da bude jedno pored drugog */
+    display:flex;
+
+    /* ovo je da bude razmak izmedu headera i liste */
+    justify-content:space-around;
+
+    /* ovo je da se centrira vertikalno */
+    align-items:center;
+
+    min-height: 8vh;
+    background-color: rgb(98, 139, 115);
+
+    /* za font */
+    font-family: 'Poppins', sans-serif;
+
+}
+
+.logo{
+
+    color: white;
+    text-transform: uppercase;
+    letter-spacing:5px;
+    font-size:22px;
+
+}
+
+.nav-links{
+
+    display:flex;
+    justify-content:space-around;
+    width: 40%;
+
+}
+
+.nav-links li{
+
+    list-style: none;
+
+}
+
+.nav-links a{
+    color: white;
+    text-decoration: none;
+    letter-spacing:5px;
+    font-weight: bold;
+    font-size:14px;
+}
+
+/* ovo je za ikonu u mobile view-u , odnosno BURGER klasu*/
+
+.burger{
+    
+    /* ovo je da se ne vidi u normalnom view-u */
+    display: none;
+}
+
+/* izgled ikone */
+.burger div{
+    
+    width: 25px;
+    height: 3px;
+    background-color: white;
+    margin: 5px;
+    transition: all 0.3s ease;
+}
+
+/* ovo je za mobile uredaje */
+@media screen and (max-width:1024px){
+
+    /* ovo je da se razmak izmedu linkova poveca */
+    .nav-links{
+
+        width: 60%;
+    
+    }
+
+}
+
+@media screen and (max-width:768px){
+
+    body{
+        
+        /* ovo je da navbar bude sakriven */
+        overflow-x: hidden;
+    }
+    .nav-links{
+
+        /* ovoje da se navbar u mobile view-u dode dolje i da bude centrirano sve */
+        position: absolute;
+        right: 0;
+        height: 92vh;
+        top: 8vh;
+        width: 50%;
+        background-color:  rgb(98, 139, 115);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        /* ovo je da ne bude ravno ispod navbara nego sa strane */
+        transform: translateX(100%);
+
+        /* ovo je koliko vremana treba da se pojavi */
+        transition: transform 0.5s ease-in;
+    }
+
+    .nav-links li{
+        
+        /* ovo je da ne mozemo vidjeti rijeci */
+        opacity: 0;
+    }
+
+    .burger{
+
+        /* ovo je da se pojavi burger za mobile  */
+        display: block;
+        cursor: pointer;
+    }
+}
+
+/* ovo je da kada se klikne da se pojavi */
+.nav-active{
+
+    transform: translateX(0);
+}
+
+/* animacija kada kliknemo gumb */
+@keyframes navLinkFade{
+
+    from{
+
+        opacity: 0;
+        transform: translateX(50px);
+    }
+
+    to{
+
+        opacity: 1;
+        transform: translateX(0);
+    }
+
+}
+
+/* da se linije pretvor u x */
+.toggle .line1{
+
+    transform: rotate(-45deg) translate(-5px, 6px);
+    
+}
+
+.toggle .line2{
+
+    opacity: 0;
+}
+
+.toggle .line3{
+
+    transform: rotate(45deg) translate(-5px, -6px);
+
+}
+
