--- a/Moja Stranica/Stranice/style.css
+++ b/Moja Stranica/Stranice/style.css
@@ -17,6 +17,7 @@ header{
     background-size: cover;
     background-position: top center;
     background-color: black;
+    height: 1080px;
 }
 
 body{
@@ -204,7 +205,13 @@ nav{
 /* NAV KRAH !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
 
    
+.kontejner{
 
+    width: 80%;
+    margin-left: auto;
+    margin-right:auto;
+    text-align: left;
+}
 h1{
 
     color: white;
@@ -227,9 +234,20 @@ h3{
 }
 
 p{
-    color: white;
-    font-size:15px;
+
+    padding-top: 100px;
     letter-spacing:2px;
+    color: white;
+    font-size:24px;
+    letter-spacing:2px;
+    font-family: Helvetica, Arial, sans-serif;
+}
+
+
+.video {
+
+    padding-top: 100px;
+    text-align: center;
 }
 
 
