--- a/Moja Stranica/Stranice/style.css
+++ b/Moja Stranica/Stranice/style.css
@@ -294,9 +294,22 @@ p{
 }
 
 .video2{
-    padding-top: 20px;
-    padding-bottom:20px;
+    padding-top: 20vh;
+    padding-bottom:20vh;
+    text-align: center;
 }
+
+
+footer{
+
+    padding-top: 40px;
+    height:100px;
+    background-color: rgb(8, 8, 8);
+    text-align: center;
+
+}
+
+
 
 
    
