--- a/Moja Stranica/Stranice/Story/style-story.css
+++ b/Moja Stranica/Stranice/Story/style-story.css
@@ -13,7 +13,7 @@ html{
 
 body{
     background-color: rgb(7, 10, 7);
-    background-image: url(../Slikež/wall.jpg);
+    background-image: url(../../Slikež/stor2.jpg);
     background-repeat: no-repeat;
     background-size: 1920px 1080px;
     background-position: top center;
