--- a/Moja Stranica/Stranice/Main/style.css
+++ b/Moja Stranica/Stranice/Main/style.css
@@ -326,6 +326,30 @@ footer{
 
 }
 
+@media screen and (max-width:1000px){
+
+    p{
+        font-size: 18px;
+    }
+
+    h3{
+        
+        font-size: 28px;
+    }
+
+    .razmak{
+        padding-bottom: 5vh ;
+    }
+
+    body{
+
+        
+        background-position: 40%, 10%;
+
+    }
+
+}
+
 
 
 
