--- a/Moja Stranica/Stranice/Story/style-story.css
+++ b/Moja Stranica/Stranice/Story/style-story.css
@@ -1,6 +1,7 @@
 html{
     height:100%;
     background-position: center center;
+    
 }
 
 *{
@@ -299,10 +300,28 @@ p{
 }
 
 .video2{
-    padding-top: 20vh;
-    padding-bottom:20vh;
+    padding-bottom: 56.25%;
+    
+    
+    position: relative;
+    overflow: hidden;
+    text-align: center;
+   
+    
+}
+
+.video2 iframe{
+
+    
+    position: absolute;
+    top: 0;
+    left: 25%;
+    width: 50%;
+    height: 50%;
     text-align: center;
 }
+
+
 
 
 footer{
@@ -316,15 +335,7 @@ footer{
 
 
 
-@media screen and (max-width:1080px){
 
-    iframe{
-
-        width: calc(900px -20%);
-        height:auto;
-    }
-
-}
 
 h3{
     color: white;
@@ -337,6 +348,9 @@ h3{
     
 }
 
+.razmak2{
+    padding-bottom: 20vh;
+}
 
 
 @media screen and (max-width:1000px){
@@ -351,7 +365,7 @@ h3{
     }
 
     .razmak{
-        padding-bottom: 20vh ;
+        padding-top: 20vh ;
     }
 
     h1{
@@ -380,6 +394,28 @@ h3{
         
         background-position: 30%, 0px;
 
+    }
+
+    .video2{
+        
+        
+        text-align: center;
+        position: relative;
+        overflow: hidden;
+    }
+    
+    .video2 iframe{
+    
+        position: absolute;
+        top: 0;
+        left: 10%;
+        width: 80%;
+        height: 80%;
+        text-align: center;
+    }
+
+    .razmak3{
+        padding-top: 10vh;
     }
 }
 
