--- a/Moja Stranica/style-story.css
+++ b/Moja Stranica/style-story.css
@@ -1,6 +1,7 @@
 html{
     height:100%;
     background-position: center center;
+    
 }
 
 *{
@@ -12,8 +13,8 @@ html{
 
 
 body{
-    background-color: rgb(7, 10, 7);
-    background-image: url(../../Slikež/wall.jpg);
+    background-color: rgb(10, 7, 7);
+    background-image: url(Slikež/4k.jpg);
     background-repeat: no-repeat;
     background-size: 1920px 1080px;
     background-position: top center;
@@ -35,7 +36,7 @@ nav{
     align-items:center;
 
     min-height: 8vh;
-    background-color: rgb(98, 139, 115);
+    background-color: rgb(155, 73, 73);
 
     /* za font */
     font-family: 'Poppins', sans-serif;
@@ -135,7 +136,7 @@ nav{
         height: 92vh;
         top: 8vh;
         width: 50%;
-        background-color:  rgb(98, 139, 115);
+        background-color:  rgb(155, 73, 73);
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -220,12 +221,12 @@ nav{
     font-size:82px;
     text-align: center;
     font-family: 'Poppins', sans-serif;
-    padding-top:30vh;
+    padding-top:40vh;
     letter-spacing:5px;
 
 }
 
-h3{
+.kontejner h3{
     color: white;
     font-size:30px;
     text-align: center;
@@ -257,7 +258,7 @@ p{
 }
 
 .razmak{
-    padding-bottom: 150px;
+    padding-bottom: 20vh;
 
 }
 
@@ -288,7 +289,6 @@ p{
 
 .story{
     padding-top: 30vh;
-    text-align: center;
 }
 
 .story p{
@@ -322,6 +322,8 @@ p{
 }
 
 
+
+
 footer{
 
     padding-top: 40px;
@@ -333,15 +335,23 @@ footer{
 
 
 
-@media screen and (max-width:1080px){
 
-    iframe{
 
-        width: calc(900px -20%);
-        height:auto;
-    }
-
+h3{
+    color: white;
+    font-size:38px;
+    text-align: center;
+    font-family: 'Poppins', sans-serif;
+    padding-bottom: 15vh;
+    letter-spacing:5px;
+    padding-top: 15vh;
+    
 }
+
+.razmak2{
+    padding-bottom: 20vh;
+}
+
 
 @media screen and (max-width:1000px){
 
@@ -355,13 +365,34 @@ footer{
     }
 
     .razmak{
-        padding-bottom: 5vh ;
+        padding-top: 20vh ;
+    }
+
+    h1{
+
+        color: white;
+        font-size:55px;
+        text-align: center;
+        font-family: 'Poppins', sans-serif;
+        padding-top:30vh;
+        letter-spacing:5px;
+    
+    }
+    
+    .kontejner h3{
+        color: white;
+        font-size:30px;
+        text-align: center;
+        font-family: 'Poppins', sans-serif;
+        padding-top:5vh;
+        letter-spacing:5px;
+        padding-bottom: 65vh;
     }
 
     body{
 
-       
-        background-position: 40%, 10%;
+        
+        background-position: 30%, 0px;
 
     }
 
@@ -383,6 +414,9 @@ footer{
         text-align: center;
     }
 
+    .razmak3{
+        padding-top: 10vh;
+    }
 }
 
 
