--- a/Moja Stranica/karakteri.css
+++ b/Moja Stranica/karakteri.css
@@ -12,7 +12,7 @@ html{
 
 body{
 
-    background-image: url(../../Slikež/927187.jpg);
+    background-image: url(Slikež/927187.jpg);
     background-color: rgb(20, 24, 29);
     background-repeat: no-repeat;
     background-size: cover;
